# Red-Dashboard

./: .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  babel.cfg  crowdin.yaml  make.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint_python.yaml  publish_crowdin.yaml  publish_pypi.yml  tests.yml
docs/: README.md  SUMMARY.md  cog_config_multi_bot.rst  cog_config_one_bot.rst  cog_installation.rst  conf.py  help_and_support.rst  index.rst  installing_companion_cog.rst  mac_linux_installation.rst  make.bat  reverse_proxy_apache.rst  reverse_proxy_apache_ssl.rst  reverse_proxy_nginx.rst  running_webserver_multi_bot.rst  running_webserver_one_bot.rst  systemctl_startup.rst  third_parties.rst  windows_installation.rst
docs/cog-installation/: cog-configuration-with-multiple-bots.md  cog-configuration-with-one-bot.md  installing-cog.md
docs/configuration_guides/: index.rst  installing_companion_cog.rst  multibot.rst  singlebot.rst
docs/installation-guides/: automatic-startup-systemctl.md  mac-linux-installation.md  windows-installation.md
docs/installation_guides/: mac_linux_installation.rst  windows_installation.rst
docs/launching-dashboard/: running-the-webserver.md  running-with-multiples-bots.md  untitled.md
docs/launching_guides/: running_webserver_multi_bot.rst  running_webserver_one_bot.rst
docs/support/: help-and-support.md
docs/webserver-installation/: automatic-startup-systemctl.md  mac-linux-installation.md  windows-installation.md
documents/: Cookie Policy.md  Privacy Policy.md  Third Party Disclaimer.md
legal/: Cookie Policy.md  Privacy Policy.md
reddash/: LICENSE.md  __init__.py  __main__.py
reddash/app/: __init__.py  constants.py  tasks.py  utils.py
reddash/app/api/: __init__.py  routes.py
reddash/app/base/: __init__.py  routes.py  util.py
reddash/app/base/templates/: base-site.html
reddash/app/base/templates/errors/: 403.html  404.html  500.html  blacklisted.html  error_message.html
reddash/app/base/templates/login/: login.html
reddash/app/base/templates/pages/: admin.html  commands.html  credits.html  third_parties.html
reddash/app/base/templates/site_template/: fixed-plugin.html  footer.html  guild.js  navigation.html  scripts-sidebar.html  scripts.html  sidebar.html
reddash/app/dashboard/: __init__.py  routes.py
reddash/app/dashboard/templates/: dashboard.html  guild.html  index.html  page-500.html
reddash/app/data_manager/: __init__.py  core.py  loader.py  ui.py
reddash/app/home/: __init__.py  routes.py
reddash/app/home/templates/: commands.html  credits.html  dashboard.html  guild.html  index.html  page-403.html  page-404.html
reddash/app/translations/: temp.txt
reddash/app/translations/af/LC_MESSAGES/: messages.po
reddash/app/translations/af_ZA/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/ar/LC_MESSAGES/: messages.po
reddash/app/translations/ar_SA/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/bg/LC_MESSAGES/: messages.po
reddash/app/translations/bg_BG/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/ca/LC_MESSAGES/: messages.po
reddash/app/translations/ca_ES/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/cs/LC_MESSAGES/: messages.po
reddash/app/translations/cs_CZ/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/da/LC_MESSAGES/: messages.po
reddash/app/translations/da_DK/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/de/LC_MESSAGES/: messages.po
reddash/app/translations/de_DE/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/el/LC_MESSAGES/: messages.po
reddash/app/translations/el_GR/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/es_ES/LC_MESSAGES/: messages.mo  messages.po
reddash/app/translations/fi/LC_MESSAGES/: messages.po
reddash/app/translations/fi_FI/LC_MESSAGES/: messages.mo  messages.po
(+117 files in other folders)
