[metadata]
name = Red-Dashboard
version = attr: reddash.__version__
description = An easy-to-use interactive web dashboard to control your Redbot.
license = AGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Neuro Assassin
author_email = redbotdashboard@gmail.com
url = https://github.com/Cog-Creators/Red-Dashboard
project_urls =
    Third Party Discord Server = https://discord.gg/vQZTdB9
    Documentation = https://red-dashboard.readthedocs.io/en/latest/
    Donate on Patreon = https://www.patreon.com/neuroassassin
    Source Code = https://github.com/NeuroAssassin/Red-Dashboard
    Red Source Code = https://github.com/Cog-Creators/Red-DiscordBot
    Red Discord Server = https://discord.gg/red
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

[options]
packages =
    find:
python_requires = >=3.8.1,<3.9
install_requires =
    Babel==2.12.1
    cryptography==3.3.2
    Flask==2.2.3
    Flask-Babel==1.0.0
    fuzzywuzzy==0.18.0
    itsdangerous==2.0.1
    Jinja2==3.1.2
    MarkupSafe==2.1.2
    PyJWT==1.7.1
    python-Levenshtein==0.12.0
    rich==11.1.0
    waitress==1.4.3
    websocket-client==0.57.0
    Werkzeug==2.2.3
include_package_data = True

[options.extras_require]
style =
    black==19.10b0
docs =
    Sphinx==4.4.0
    sphinx-rtd-theme==1.0.0
    sphinx-prompt==1.5.0

[options.entry_points]
console_scripts = 
    reddash = reddash.__main__:main

[options.packages.find]
include =
    reddash
    reddash.*
