[metadata]
name = Red-Dashboard
version = attr: reddash.__version__
description = An easy-to-use interactive web dashboard to control your Redbot.
license = AGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Neuro Assassin
author_email = redbotdashboard@gmail.com
url = https://github.com/Cog-Creators/Red-Dashboard
project_urls =
    Third Party Discord Server = https://discord.gg/vQZTdB9
    Documentation = https://red-dashboard.readthedocs.io/en/latest/
    Donate on Patreon = https://www.patreon.com/neuroassassin
    Source Code = https://github.com/NeuroAssassin/Red-Dashboard
    Red Source Code = https://github.com/Cog-Creators/Red-DiscordBot
    Red Discord Server = https://discord.gg/red
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System

[options]
packages =
    find:
python_requires = >=3.8.1,<3.10
install_requires =
    flask==1.1.2
    itsdangerous==2.0.1
    requests==2.23.0
    cryptography==3.3.2
    websocket_client==0.57.0
    waitress==1.4.3
    rich==1.3.1
    fuzzywuzzy==0.18.0
    python-Levenshtein==0.12.0
    flask-babel==1.0.0
    pyjwt==1.7.1
    appdirs==1.4.4
    jinja2<3.1.0
    itsdangerous==2.0.1
    werkzeug==2.0.3
    
include_package_data = True

[options.extras_require]
style =
    black==19.10b0
docs =
    Sphinx==4.4.0
    sphinx-rtd-theme==1.0.0
    sphinx-prompt==1.5.0

[options.entry_points]
console_scripts = 
    reddash = reddash.__main__:main

[options.packages.find]
include =
    reddash
    reddash.*
